# Eresus-sentinel

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  BENCHMARK_RESULTS.md  CHANGELOG.md  COMPETITIVE_BENCHMARK.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  FUZZER_ROADMAP.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  action.yml  alembic.ini  benchmark_summary_v2.md  docker-compose.yml  mkdocs.yml  pyproject.toml  sentinel.toml
.github/: SECURITY.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml  feature_request.yml
.github/workflows/: build-packages.yml  ci.yaml  ci.yml  pickle-wheels.yml  (+3 more)
Eresus-sentiel-lite/: .dockerignore  .editorconfig  .pre-commit-hooks.yaml  AGENTS.md  Dockerfile.cuda  LICENSE  README.md  STACK.md  benchmark_report.json  benchmark_report_v2.json  benchmark_report_v3.json  benchmark_summary.md  benchmark_summary_v3.md  docker-compose.yml  sentinel.toml
action/: Dockerfile  entrypoint.sh
ci/: github-actions.yml
config/: policy.yaml  proxy_rules.yaml
docs/: ARCHITECTURE.md  CI_PRECOMMIT.md  CLI_CONTRACT.md  CLI_REFERENCE.md  COMMUNITY.md  COMPATIBILITY.md  DEMO_SCAN_RESULTS.md  FALSE_POSITIVES.md  FAQ.md  GOOD_FIRST_ISSUES.md  MCP_PROXY_DEPLOYMENT.md  OFFLINE.md  PLUGIN_AUTHORING.md  PROMO_CONTENT.md  QUICKSTART.md  ROADMAP.md  RULE_AUTHORING.md  SCANNER_AUTHORING.md  SCANNER_SELECTION.md  SECURITY_MODEL.md  SENTINEL_FILE_FORMAT.md  SENTINEL_PLATFORM_ARCHITECTURE.md  SENTINEL_PLUGIN_FORMAT.md  SUPPORTED_FORMATS.md  TROUBLESHOOTING.md  TR_QUICKSTART.md  UPDATE_POST.md  index.md
examples/: assertion-pack.sntl  dataset.sntl  eval.sntl  plugin.sentinel  provider-contract.sntl  redteam.sntl  runtime-policy.sntl
frontend/: index.html  package-lock.json  package.json
marketing/: README.md  content-matrix.md
notebooks/: README.md  archive_slip_attacks.py  model_backdoor_lab.py
packaging/: sentinel.spec
payloads/: agentic_probes.yaml  injection.yaml  jailbreak.yaml  tool_abuse.yaml
playbooks/: mcp_injection_suite.yaml
rules/: a2a_rules.yaml  agent_atr_signatures.yaml  aibom_scanner_patterns.yaml  artifact_blocklist.yaml  backdoor_patterns.yaml  cntk_rules.yaml  dangerous_code_patterns.yaml  deception_patterns.yaml  diff_patterns.yaml  fp_patterns.yaml  industry_rules.yaml  injection_patterns.yaml  input_data_exfiltration.yaml  jax_rules.yaml  jinja2_rules.yaml  license_blocklist.yaml  manifest_rules.yaml  mcp_rules.yaml  model_format_rules.yaml  multi_agent_rules.yaml  multilingual_injection.yaml  output_sensitive_patterns.yaml  pickle_protocol_rules.yaml  prompt_injection_ioc_rules.yaml  rknn_rules.yaml  sast_rules.yaml  sast_secret_patterns.yaml  scanner_rules.yaml  secret_patterns.yaml  skill_threat_patterns.yaml  supply_chain_rules.yaml  taint_rules.yaml  tf_metagraph_rules.yaml  toxic_lexicon.yaml
rust/sentinel-gguf/: Cargo.toml
rust/sentinel-gguf/fuzz/: Cargo.toml
rust/sentinel-gguf/fuzz/fuzz_targets/: fuzz_gguf.rs
rust/sentinel-gguf/src/: checks.rs  header.rs  lib.rs  report.rs
rust/sentinel-pickle/: Cargo.toml  README.md  pyproject.toml
rust/sentinel-pickle/benches/: generation.rs
rust/sentinel-pickle/data/: stdlib_complete.txt
rust/sentinel-pickle/fuzz/: .gitignore  Cargo.toml  README.md
rust/sentinel-pickle/fuzz/fuzz_targets/: fuzz_all_formats.rs  fuzz_differential.rs  fuzz_flax.rs  fuzz_gguf.rs  fuzz_llamafile.rs  fuzz_lora.rs  fuzz_mlflow.rs  fuzz_ollama.rs  fuzz_opcode_sequence.rs  fuzz_paddle.rs  fuzz_policy.rs  fuzz_scanner.rs  fuzz_structure_pickle.rs  fuzz_tokenizer.rs  fuzz_torchscript.rs  fuzz_validate_python.rs
rust/sentinel-pickle/fuzz/src/: builders.rs  corpus.rs  invariants.rs  lib.rs
rust/sentinel-pickle/src/: lib.rs  opcode.rs  policy.rs  report.rs  scanner.rs  state.rs  strings.rs
rust/sentinel-pickle/src/generator/: core.rs  emission.rs  mod.rs  mutation.rs  source.rs  stack_ops.rs  state.rs  utils.rs  validation.rs
rust/sentinel-pickle/src/mutators/: bitflip.rs  boundary.rs  character.rs  injection.rs  memoindex.rs  mod.rs  offbyone.rs  stringlen.rs  typeconfusion.rs
rust/sentinel-safetensors/: Cargo.toml
rust/sentinel-safetensors/src/: checks.rs  header.rs  lib.rs  report.rs
rust/sentinel-tokenizer/fuzz/: Cargo.toml
rust/sentinel-tokenizer/fuzz/fuzz_targets/: fuzz_tokenizer.rs
scripts/: _paper_part1.py  _paper_part2.py  _paper_part3.py  _paper_part4.py  benchmark_compare.py  benchmark_competitor_full.py  benchmark_report.py  benchmark_runner.py  benchmark_vs_competitors.py  benchmark_vs_refs.py  cli_benchmark.sh  gen_fuzz_corpus.py  generate_ghsa_corpus.py  generate_paper_pdf.py  refs_parity_manifest.py  sentinel-api-qa  sentinel-cli-qa  sentinel_api_qa.py  stress_cli_matrix.sh
tapes/: adversarial-corpus.tape  agent-mcp.tape  firewall-multiturn.tape  hydra-cve.tape  model-card-creds.tape  multi-format.tape  pickle-chain.tape  redteam-probes.tape  sast-multilang.tape  torch7-scan.tape
tests/: test_a2a_scanner.py  test_agent_supply_chain.py  test_aibom_phase23.py  test_aibom_scanners_full.py  test_aibom_schema_cli.py  test_artifact_cli_parity.py  test_artifact_fuzzer_formats.py  test_artifact_hardening.py  test_artifact_scan_options.py  test_async_pipeline.py  test_auth_modules.py  test_cli_doctor.py  test_cli_firewall_stdin.py  test_cli_parser_regressions.py  test_cntk_scanner_comprehensive.py  test_competitor_parity.py  test_dashboard_cli.py  test_dashboard_security.py  test_deception.py  test_eval_runner.py  test_export_cyclonedx.py  test_export_report_extensions.py  test_export_spdx.py  test_export_webhook.py  test_fickling_parity.py  test_firewall.py  test_format_analyzer.py  test_full_gap_phases.py  test_fuzz_selftest_gate.py  test_fuzzer_enterprise.py  test_fuzzer_expansions.py  test_fuzzer_generator.py  test_hf_supply_chain_offline.py  test_hubness_securebert2.py  test_hygiene.py  test_langchain_agentsec_compat.py  test_mcp_enhancements.py  test_mcp_live_scanner.py  test_mcp_proxy_runtime.py  test_mcp_proxy_security.py  (+54 more)
(+1226 files in other folders)
