[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eresus-sentinel"
version = "0.1.0"
description = "Production-grade AI/LLM Security Platform — Artifact scanning, input/output firewalls, red teaming, agent security, and ML supply chain auditing"
readme = "docs/QUICKSTART.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.10,<3.15"
authors = [
    {name = "Eresus Security", email = "engineering@eresussec.com"}
]
keywords = [
    "llm", "security", "ai-safety", "prompt-injection", "model-scanning",
    "red-team", "firewall", "guardrails", "mlsecops", "devsecops",
    "pickle-scanner", "safetensors", "gguf", "mcp-security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.136.0",
    "pyyaml>=6.0.1,<7",
    "rich>=13.7,<14",
    "uvicorn>=0.44.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.44.0,<5",
    "torch>=2.4.0",
    "onnxruntime>=1.18.0,<2",
]
scan = [
    "eresus-sentinel[ml]",
    "eresus-sentinel[hf]",
]
firewall = [
    "detect-secrets>=1.4.0,<2",
    "presidio-analyzer>=2.2.350,<3",
    "presidio-anonymizer>=2.2.350,<3",
    "tiktoken>=0.7.0,<1",
    "nltk>=3.9,<4",
]
api = [
    "fastapi>=0.111.0,<1",
    "uvicorn[standard]>=0.30.0,<1",
    "pydantic>=2.7,<3",
    "python-multipart>=0.0.26,<1",
    "slowapi>=0.1.9,<1",
    "structlog>=24.1,<25",
]
hf = [
    "huggingface-hub>=0.24.0,<1",
]
vault = [
    "cryptography>=46.0.7,<47",
]
db = [
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "asyncpg>=0.29.0,<1",
    "alembic>=1.13.0,<2",
    "bcrypt>=4.0.0,<6",
]
otel = [
    "opentelemetry-api>=1.25.0,<2",
    "opentelemetry-sdk>=1.25.0,<2",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-exporter-prometheus>=0.46b0",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocs-material-extensions>=1.3",
    "mkdocs-jupyter>=0.25",
    "mkdocs-git-revision-date-localized-plugin>=1.4",
]
dev = [
    "eresus-sentinel[docs]",
    "pytest>=8.0.0,<9",
    "pytest-cov>=6.0,<7",
    "pytest-asyncio>=0.24",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7,<4",
    "pip-audit>=2.9,<3",
    "build>=1.2",
    "twine>=5.0",
]
all = [
    "eresus-sentinel[ml]",
    "eresus-sentinel[firewall]",
    "eresus-sentinel[hf]",
    "eresus-sentinel[vault]",
    "eresus-sentinel[api]",
    "eresus-sentinel[otel]",
    "eresus-sentinel[scan]",
]

[project.urls]
Homepage = "https://eresussec.com"
Documentation = "https://eresussec.com/docs"
Repository = "https://github.com/eresus-security/sentinel"
Changelog = "https://github.com/eresus-security/sentinel/blob/main/CHANGELOG.md"
Issues = "https://github.com/eresus-security/sentinel/issues"
Security = "https://github.com/eresus-security/sentinel/blob/main/SECURITY.md"

[project.scripts]
sentinel = "sentinel.cli:main"
eresus-sentinel = "sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
sentinel = ["data/*.yaml", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "A", "C4", "SIM", "TCH"]
ignore = [
    "S101",   # Allow assert in tests
    "S603",   # Allow subprocess calls (we need them for CLI dispatch)
    "S607",   # Allow partial executable path
    "B008",   # Allow function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["sentinel"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "S105"]
"notebooks/*" = ["E402", "F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-p no:warnings --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "gpu: marks tests requiring GPU",
]

[tool.coverage.run]
source = ["python/sentinel"]
omit = [
    "tests/*",
    "*/refs/*",
    "*/notebooks/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]

[dependency-groups]
dev = [
    "fickling>=0.1.10",
    "modelscan>=0.8.8",
    "picklescan>=1.0.4",
]
