[package]
name = "sentinel-pickle"
version = "0.1.0"
edition = "2021"
description = "High-performance pickle opcode scanner for Eresus Sentinel"
license = "LicenseRef-ESL-1.1"
authors = ["Eresus Security <security@eresussec.com>"]
readme = "README.md"

[lib]
name = "sentinel_pickle"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.9"
rand_chacha = "0.9"
arbitrary = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
# Enable for cargo-fuzz builds (exposes pub(crate) internals to fuzz targets)
fuzz = []

[[bench]]
name = "generation"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
