[package]
name = "sentinel-tokenizer-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sentinel-tokenizer = { path = ".." }

[[bin]]
name = "fuzz_tokenizer"
path = "fuzz_targets/fuzz_tokenizer.rs"
test = false
doc  = false

[profile.release]
opt-level     = 3
debug         = false
panic         = "abort"
lto           = "thin"
codegen-units = 1
